--- a/app/_posts/2014-05-19-link-roundup-may-18-2014.md
+++ b/app/_posts/2014-05-19-link-roundup-may-18-2014.md
@@ -10,7 +10,7 @@ categories:
 {% include roundup-item.html
   link="http://interstellarselfiestation.com/"
   title="INTERSTELLAR SELFIE STATION"
-  screenshot="http://librarylab.law.harvard.edu/roundup/images/thumb-FlPmtqlN.png"
+  screenshot="https://lil.law.harvard.edu/roundup/images/thumb-FlPmtqlN.png"
   text="so good"
   by="jeff"
 %}
@@ -18,7 +18,7 @@ categories:
 {% include roundup-item.html
   link="http://www.designboom.com/technology/the-drinkable-book-cleans-purifies-water-with-advanced-filtering-paper-05-06-2014/"
   title="The drinkable book purifies water"
-  screenshot="http://librarylab.law.harvard.edu/roundup/images/thumb-LWcVabIG.png"
+  screenshot="https://lil.law.harvard.edu/roundup/images/thumb-LWcVabIG.png"
   text="The form factor and mechanics of the book make it a good delivery device for a large spectrum of things."
   by="Matt Phillips"
 %}
@@ -26,7 +26,7 @@ categories:
 {% include roundup-item.html
   link="http://nymag.com/daily/intelligencer/2014/05/libraries-now-new-york-video.html"
   title="Video: A Day in the Life of NYC's Branches -- NYMag"
-  screenshot="http://librarylab.law.harvard.edu/roundup/images/thumb-QBajAmAn.png"
+  screenshot="https://lil.law.harvard.edu/roundup/images/thumb-QBajAmAn.png"
   text="awesome"
   by="jeff"
 %}
@@ -34,7 +34,7 @@ categories:
 {% include roundup-item.html
   link="http://www.niemanlab.org/2014/05/the-leaked-new-york-times-innovation-report-is-one-of-the-key-documents-of-this-media-age/"
   title="The leaked New York Times innovation report is one of the key documents of this media age"
-  screenshot="http://librarylab.law.harvard.edu/roundup/images/thumb-mydPnLJS.png"
+  screenshot="https://lil.law.harvard.edu/roundup/images/thumb-mydPnLJS.png"
   text="When an institution like the @nytimes produces for so long, they \"can be both a daily newsletter and a library\""
   by="Matt Phillips"
 %}
