All images need not be links.

--- a/app/_posts/2013-09-24-perma-cc.md
+++ b/app/_posts/2013-09-24-perma-cc.md
@@ -5,7 +5,7 @@ title: Perma.cc
 wordpress_id: 1753
 ---
 
-[![perma-infinity-landing](https://lil-blog-media.s3.amazonaws.com/2013/09/perma-infinity-landing.png)](https://lil-blog-media.s3.amazonaws.com/2013/09/perma-infinity-landing.png)
+![perma-infinity-landing](https://lil-blog-media.s3.amazonaws.com/2013/09/perma-infinity-landing.png)
 
 Websites change, go away, and are taken down. In general, we understand that the Web is ephemeral and we're okay with encountering the occasional [404](http://en.wikipedia.org/wiki/HTTP_404). We can tell ourselves, "Hey, don't worry about it. There are at least 542 million other cat pictures out there. I'll find another one." Sometimes though, you are linking to something important and it's a huge bummer to lose the content at the other end of the link. Like when you're [reading a Supreme Court opinion and every other link you click on is dead](http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2329161).
 
