--- a/app/_posts/2012-02-12-1053.md
+++ b/app/_posts/2012-02-12-1053.md
@@ -15,8 +15,8 @@ While cleaning out my phones SD card I found these two photos.
 
 Jeff Goldenson's copy of A Pattern Language:
 
-[![Pattern Language book with page markers](https://lil-blog-media.s3.amazonaws.com/2012/02/patternlanguage.jpg)](https://lil-blog-media.s3.amazonaws.com/2012/02/patternlanguage.jpg)
+![Pattern Language book with page markers](https://lil-blog-media.s3.amazonaws.com/2012/02/patternlanguage.jpg)
 
 From just a few days ago, here's Karen Coyle's explanation of how FRBR "works." (It made sense while she was explaining it.)
 
-[![Diagram of FRBR - very confusing!](https://lil-blog-media.s3.amazonaws.com/2012/02/frbr-karen-coyle.jpg)](https://lil-blog-media.s3.amazonaws.com/2012/02/frbr-karen-coyle.jpg)
+![Diagram of FRBR - very confusing!](https://lil-blog-media.s3.amazonaws.com/2012/02/frbr-karen-coyle.jpg)
