Twitter and Flickr

--- a/app/_posts/2017-06-15-iipc-2017-day-one.md
+++ b/app/_posts/2017-06-15-iipc-2017-day-one.md
@@ -5,13 +5,14 @@ title: "IIPC 2017 – Day One"
 wordpress_id: 1
 ---
 
-![](https://www.flickr.com/photos/146775445@N03/34457548734)
-It's exciting to be back at IIPC this year to chat Perma.cc and web archives!
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/34457548734" title="Untitled"><img src="https://farm5.staticflickr.com/4210/34457548734_287c2703f8_k.jpg" width="1536" height="2048" alt="Untitled"></a>
+<small>It's exciting to be back at IIPC this year to chat Perma.cc and web archives!</small>
 
 The conference kicked off at on Wednesday, June 14, at 9:00 with coffee, snacks, and familiar faces from all parts of the world. Web archives bring us together physically!
 
-![](https://www.flickr.com/photos/146775445@N03/34913755490)
-So many people to meet. So many collaborators to greet!
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/34913755490" title="Untitled"><img src="https://farm5.staticflickr.com/4217/34913755490_76a0d0f5c1_k.jpg" width="2048" height="1536" alt="Untitled"></a>
+<small>So many people to meet. So many collaborators to greet!</small>
 
 **Jane Winters** and **Nic Taylor** welcomed. It’s wonderful to converse and share in this space — grand, human, bold, warm, strong. Love the Senate House at [University of London](http://www.london.ac.uk/). Thank you so much for hosting us!
 
@@ -45,8 +46,8 @@ Data subject (data cloud or data footprint) is an approach that has felt interes
 
 Technology as cultural material and material culture.
 
-![](https://www.flickr.com/photos/146775445@N03/34925213010)
-University of London is a fantastic space!
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/34925213010" title="Untitled"><img src="https://farm5.staticflickr.com/4240/34925213010_7550b06f2f_k.jpg" width="2048" height="1536" alt="Untitled"></a>
+<small>University of London is a fantastic space!</small>
 
 **Jefferson Bailey**, Internet Archive
 Advancing access and interface for research use of web archives
@@ -71,8 +72,8 @@ Digital desolation is a term that describes abandoned sites on the web. Sites th
 
 Old sites might not bubble to the top in today’s search engines --- they’re likely at the long tail of what is returned. You have to work to find good old pages.
 
-![](https://www.flickr.com/photos/146775445@N03/35261058336/in/album-72157682044130784/)
-The team grabbing some morning coffee
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/35261058336" title="Untitled"><img src="https://farm5.staticflickr.com/4259/35261058336_0fda0d4e32_k.jpg" width="2048" height="1536" alt="Untitled"></a>
+<small>The team grabbing some morning coffee</small>
 
 **Ralph Schroederucla**, [Oxford Internet Institute](https://www.oii.ox.ac.uk/)
 
@@ -97,8 +98,8 @@ Maybe having reliable information about health could be construed as civil right
 
 And unreliable, false information goes against human rights.
 
-![](https://www.flickr.com/photos/146775445@N03/35312914995/in/album-72157682044130784/)
-London is a delightful host for post-conference wanderings
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/35312914995" title="Untitled"><img src="https://farm5.staticflickr.com/4251/35312914995_c2ca0eceb7_k.jpg" width="1536" height="2048" alt="Untitled"></a>
+<small>London is a delightful host for post-conference wanderings</small>
 
 Oh, dang, it’s lunch already. It’s been a fever of web archiving!
 
@@ -118,6 +119,8 @@ Students are not consistent when they refer to web material, even if they follow
 The speakers studied another corpus --- 10 danish academic monographs and found similar variation around citations. Maybe we can work toward a good reference style?
 
 Form of suggested reference might be something like
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">PWID: Persistent web identifier <a href="https://twitter.com/hashtag/WAWeek2017?src=hash">#WAWeek2017</a> <br>(personal consideration: i feel perplexed with the idea of new identifiers) <a href="https://t.co/sYmvDhTXcx">pic.twitter.com/sYmvDhTXcx</a></p>&mdash; Raffaele Messuti (@atomotic) <a href="https://twitter.com/atomotic/status/874981023855116288">June 14, 2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 Where page is the content coverage, or thing the author is citing. Fantastic!
 
@@ -125,9 +128,8 @@ What if we were to make the content coverage in a fragment identifier (the stuff
 
     web.archive.org/<timestamp>/<url>#<content coverage>
 
-![](https://www.flickr.com/photos/146775445@N03/34925191150/in/album-72157682044130784/)
-And totally unrelated, this fridge was spotted later that day on the streets of
-London. We need a fridge in LIL. Probably not worth shipping back though.
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/34925191150" title="Untitled"><img src="https://farm5.staticflickr.com/4281/34925191150_6e5e89ec01_k.jpg" width="1536" height="2048" alt="Untitled"></a>
+<small>And totally unrelated, this fridge was spotted later that day on the streets of London. We need a fridge in LIL. Probably not worth shipping back though.</small>
 
 **Some Author**, some organization
 
@@ -137,10 +139,12 @@ Total collection of 400 TB of UK websites only, imposing a “territorial” bou
 
 Those TLDs are not everything though --- if the work is made available from a website with a uk domain name or that person is physically based in uk
 
-![](https://www.flickr.com/photos/146775445@N03/35145940662/in/album-72157682044130784/)
-Fantastic first day!! Post-conference toast (with a bday cheers!)!!
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/35145940662" title="Untitled"><img src="https://farm5.staticflickr.com/4237/35145940662_586bd230c8_k.jpg" width="2048" height="1536" alt="Untitled"></a>
+<small>Fantastic first day!! Post-conference toast (with a bday cheers!)!!</small>
 
-![](https://www.flickr.com/photos/146775445@N03/35182900141/in/album-72157682044130784/)
-Recap, decompress, and keep the mind active for day two of IIPC!
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/146775445@N03/35182900141" title="Untitled"><img src="https://farm5.staticflickr.com/4220/35182900141_aeb023e0e4_k.jpg" width="2048" height="1536" alt="Untitled"></a>
+<small>Recap, decompress, and keep the mind active for day two of IIPC!</small>
 
 The day was full of energy, ideas, and friendly folks sharing their most meaningful work. An absolute treat to be here and share our work! Two more days to soak up!
+
+<script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
