--- a/app/_posts/2017-02-10-lil-talks.md
+++ b/app/_posts/2017-02-10-lil-talks.md
@@ -3,6 +3,9 @@ author: anastasia-aizman
 date: 2017-02-10 14:00:43+00:00
 title: "LIL talks: Andy"
 wordpress_id: 2624
+categories:
+- Friday Fundays
+- LIL talks
 ---
 
 We started a weekly series where members and friends of the LIL team teach us about something they are interested in.
