--- a/app/_posts/2017-05-19-2761.md
+++ b/app/_posts/2017-05-19-2761.md
@@ -3,6 +3,9 @@ author: andy-silva
 date: 2017-05-19 16:00:43+00:00
 title: "LIL Talks: Seltzer!"
 wordpress_id: 2761
+categories:
+- Friday Fundays
+- LIL talks
 ---
 
 In this week’s LIL talk, Matt Phillips gave us an effervescent presentation on Seltzer, followed by a tasting.
