--- a/app/_posts/2011-10-31-916.md
+++ b/app/_posts/2011-10-31-916.md
@@ -27,7 +27,7 @@ I recently was a member of a panel talking about DIY Libraries at the New School
 
 ## [David Weinberger:]({{ site.baseurl }}/about/)
 
-I participated in the Library Lab fair, where our Lab showed the two of its projects that received grants: LibraryCloud and a series of [library innovation podcasts](http://librarylab.law.harvard.edu/blog/tag/podcast-2/).
+I participated in the Library Lab fair, where our Lab showed the two of its projects that received grants: LibraryCloud and a series of [library innovation podcasts]({{ site.baseurl }}/blog/tag/podcast/).
 
 ## [Jeff Goldenson:]({{ site.baseurl }}/about/)
 
