--- a/app/_posts/2017-06-16-iipc-2017-day-two.md
+++ b/app/_posts/2017-06-16-iipc-2017-day-two.md
@@ -5,7 +5,7 @@ title: "IIPC 2017 – Day Two"
 wordpress_id: 2838
 ---
 
-Most of us attended the technical track on day two of [IIPC](http://netpreserve.org/) 2017. (See also Matt’s [post about the first day](https://lil.law.harvard.edu/blog/2017/06/15/iipc-2017-day-one/.) Andrew Jackson of the British Library expanded on his talk the previous day about workflows for ingesting and processing web archives. Nick Ruest and Ian MIlligan described [WALK](http://webarchives.ca/), or Web Archiving for Longitudinal Knowledge, a system for aggregating Canadian web archives, generating derivative products, and making them accessible via search and visualizations. Gregory Wiedeman from University at Albany, SUNY, described his process for automating the creation of web archive records in [ArchivesSpace](http://archivesspace.org/) and adding descriptive metadata using [Archive-It](https://archive-it.org/) APIs according to [DACS](http://www2.archivists.org/standards/DACS) (Describing Archives: A Content Standard).
+Most of us attended the technical track on day two of [IIPC](http://netpreserve.org/) 2017. (See also Matt’s [post about the first day](https://lil.law.harvard.edu/blog/2017/06/15/iipc-2017-day-one/.) Andrew Jackson of the British Library expanded on his talk the previous day about workflows for ingesting and processing web archives. Nick Ruest and Ian Milligan described [WALK](http://webarchives.ca/), or Web Archiving for Longitudinal Knowledge, a system for aggregating Canadian web archives, generating derivative products, and making them accessible via search and visualizations. Gregory Wiedeman from University at Albany, SUNY, described his process for automating the creation of web archive records in [ArchivesSpace](http://archivesspace.org/) and adding descriptive metadata using [Archive-It](https://archive-it.org/) APIs according to [DACS](http://www2.archivists.org/standards/DACS) (Describing Archives: A Content Standard).
 
 After the break, the [Internet Archive’s](https://archive.org/) Jefferson Bailey roared through a presentation of IA’s new tools, including systems for analysis, search, capture ([Brozzler](https://github.com/internetarchive/brozzler!), and availability. Mat Kelly from Old Dominion University described three tools for enabling non-techical users to create, index, and view web archives: [WARCreate](http://warcreate.com/), [WAIL](http://matkelly.com/wail), and [Mink](https://github.com/machawk1/mink). Lozana Rossenova and Ilya Kreymer of Rhizome demonstrated the use of containerized browsers for playback of web content that is no longer usable in modern browsers (think Java applets), as well as some upcoming features in [Webrecorder](https://webrecorder.io/) for patching content into incomplete captures.
 
