I changed my mind about one word

--- a/app/_posts/2024-02-29-the-cloud.md
+++ b/app/_posts/2024-02-29-the-cloud.md
@@ -8,7 +8,7 @@ sharing-image: images/exploding-cloud.png
 <img src="https://lil-blog-media.s3.amazonaws.com/exploding-cloud.png" alt="The moment the cloud explodes"/>
 
 
-How do you make the invisible visible? This is the central premise of The Cloud, a project that I’ve been working on as a technologist in residence at LIL. The idea originated as a visual joke about the cloud: the vaporous metaphor we use to describe the distributed servers that host remotely-run software and hardware.
+How do you make the invisible visible? This is the central premise of The Cloud, a project that I’ve been working on as a technologist in residence at LIL. The idea originated as a visual joke about the cloud: the vaporous metaphor we use to describe the distributed servers that host remotely-run software and infrastructure.
 
 <!--more-->
 
