Try one WebP file

--- a/app/_posts/2024-02-29-the-cloud.md
+++ b/app/_posts/2024-02-29-the-cloud.md
@@ -17,7 +17,7 @@ Initially, I was curious about the effects of the applications and services LIL 
 Obviously, it had to include a cloud. And when do you see clouds? In a thunderstorm! What if a cloud emitted little lightning strikes every time someone created a Perma Link?
 
 
-<img src="https://lil-blog-media.s3.amazonaws.com/LightningCloud.png" alt="A cloud with a lightning bolt descending from it."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/LightningCloud.webp" alt="A cloud with a lightning bolt descending from it."/>
 
 That seemed a little too hard. 
 What if instead, it rained?
