--- a/app/_posts/2024-02-29-the-cloud.md
+++ b/app/_posts/2024-02-29-the-cloud.md
@@ -5,7 +5,7 @@ excerpt_separator: <!--more-->
 sharing-image: images/exploding-cloud.png
 ---
 
-<img src="https://lil-blog-media.s3.amazonaws.com/exploding-cloud.png" alt="The moment the cloud explodes"/>
+<img src="https://lil-blog-media.s3.amazonaws.com/exploding-cloud.webp" alt="The moment the cloud explodes"/>
 
 
 How do you make the invisible visible? This is the central premise of The Cloud, a project that I’ve been working on as a technologist in residence at LIL. The idea originated as a visual joke about the cloud: the vaporous metaphor we use to describe the distributed servers that host remotely-run software and infrastructure.
@@ -22,20 +22,20 @@ Obviously, it had to include a cloud. And when do you see clouds? In a thunderst
 That seemed a little too hard. 
 What if instead, it rained?
 
-<img src="https://lil-blog-media.s3.amazonaws.com/RainyCloud.png" alt="A cloud in the middle of a rain shower."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/RainyCloud.webp" alt="A cloud in the middle of a rain shower."/>
 
 I pursued this idea a bit, finding resources to create a smart water pump that I could program to respond to our API. But I hesitated–all that water around all those devices–the idea seemed too wet to execute.
 
 What if we found a way to represent rain that wasn’t literal rain? That could work. We could use LEDs, and program them to look like rain was falling every time someone created a new link.
 
-<img src="https://lil-blog-media.s3.amazonaws.com/LEDCloud-small.png" alt="A cloud against a screen of LEDs."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/LEDCloud-small.webp" alt="A cloud against a screen of LEDs."/>
 
 This seemed like a physically reasonable project, but it wasn’t quite hitting the mark. Why was the cloud raining every time someone hit our API? What did that have to do with carbon emissions and climate change?
 
 Instead, I decided to simplify the conceit. A user scrolls through various digital activities (such as a Google search or mining bitcoin) and their associated carbon footprints, culled from various sources. 
 
 <figure>
-<img src="https://lil-blog-media.s3.amazonaws.com/sample-cloud.png" alt="Four screenshots of the Cloud application, showing different amounts of carbon emissions on the screen."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/sample-cloud.webp" alt="Four screenshots of the Cloud application, showing different amounts of carbon emissions on the screen."/>
 <figcaption>Four screenshots from the Cloud app</figcaption>
 </figure>
 
@@ -54,19 +54,19 @@ The cloud responds by growing at each step, until it ultimately explodes.
 
 I was lucky enough to be able to try it out on students, staff, and faculty at Harvard Law School’s Caspersen Student Center.
 
-<img src="https://lil-blog-media.s3.amazonaws.com/cloud_display.png" alt="The cloud application and attachment set up in the Casperson Student Center."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/cloud_display.webp" alt="The cloud application and attachment set up in the Casperson Student Center."/>
 
-<img src="https://lil-blog-media.s3.amazonaws.com/Overshoulder.png" alt="Looking over the shoulder of a student using the app."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/Overshoulder.webp" alt="Looking over the shoulder of a student using the app."/>
 
-<img src="https://lil-blog-media.s3.amazonaws.com/student_1.png" alt="Two smiling students interact with the Cloud app."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/student_1.webp" alt="Two smiling students interact with the Cloud app."/>
 
-<img src="https://lil-blog-media.s3.amazonaws.com/student_2.png" alt="A student interacts with the Cloud app."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/student_2.webp" alt="A student interacts with the Cloud app."/>
 
 Running the pop-up events provided invaluable insights. Some users were shocked and said that they had never previously considered the carbon impact their digital lives might have. There were those who were simply delighted by the project and found the cloud itself a relatively benign presence. Others found the cloud and its conceit somewhat terrifying–especially as it grew larger and appeared to be on the edge of bursting. Many wanted to touch it, and most wanted to know what steps they could take to lower their personal footprints. This is a tough question to answer given that the sources of impact are so diffuse, but some suggestions include extending the life of your electronics and avoiding passive consumption. Putting pressure on companies to reveal the environmental impacts of their products could also be an effective tactic because having that information would enable users to make more informed choices about their purchases. The takeaways from the pop-ups confirmed my suspicion: that this is an area ripe for further education.
 
 I hope to bring the Cloud to other locations (such as libraries), to continue to use it as an education tool. The code itself is available in a [GitHub repo](https://github.com/harvard-lil/the-cloud) with instructions for how to build the cloud attachment for anyone who wants to create their own.
 
-<img src="https://lil-blog-media.s3.amazonaws.com/Cloud2-print.jpg" alt="A glowing cloud floats above the Seattle skyline."/>
+<img src="https://lil-blog-media.s3.amazonaws.com/Cloud2-print.webp" alt="A glowing cloud floats above the Seattle skyline."/>
 
 **Special thanks to**:
 
