--- a/app/_posts/2024-02-29-the-cloud.md
+++ b/app/_posts/2024-02-29-the-cloud.md
@@ -3,6 +3,9 @@ title: 'The Cloud'
 author: [rebecca-kilberg]
 excerpt_separator: <!--more-->
 sharing-image: images/exploding-cloud.png
+tags:
+- Library Principles
+- Fellows Research
 ---
 
 <img src="https://lil-blog-media.s3.amazonaws.com/exploding-cloud.webp" alt="The moment the cloud explodes"/>
