Bex is singular.

--- a/app/_posts/2024-02-29-the-cloud.md
+++ b/app/_posts/2024-02-29-the-cloud.md
@@ -1,6 +1,6 @@
 ---
 title: 'The Cloud'
-author: [rebecca-kilberg]
+author: rebecca-kilberg
 excerpt_separator: <!--more-->
 sharing-image: images/exploding-cloud.png
 tags:
