Add apostrophe to tag.

--- a/app/_posts/2024-02-29-the-cloud.md
+++ b/app/_posts/2024-02-29-the-cloud.md
@@ -5,7 +5,7 @@ excerpt_separator: <!--more-->
 sharing-image: images/exploding-cloud.png
 tags:
 - Library Principles
-- Fellows Research
+- Fellows' Research
 ---
 
 <img src="https://lil-blog-media.s3.amazonaws.com/exploding-cloud.webp" alt="The moment the cloud explodes"/>
